# spongebob

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: copilot-instructions.md  release-plz.toml
.github/workflows/: conventional-commit.yaml  release-binaries.yaml  release-plz.yaml
src/: lib.rs  main.rs
tests/: goodboye.rs  spongebob.rs
