[package]
name = "spongebob"
version = "1.0.1"
authors = ["Adam Sasine <adam.sasine@gmail.com>"]
edition = "2021"
description = "A utility to convert text to spongebob case a.k.a tHe MoCkInG sPoNgEbOb MeMe."
homepage = "https://github.com/asasine/spongebob"
repository = "https://github.com/asasine/spongebob"
license = "MIT"
categories = ["command-line-utilities", "text-processing"]

[dependencies]
arboard = "3.4"
clap = { version = "4.5", features = ["derive", "unicode"] }
human-panic = "2.0"
rand = "0.8"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
